--- a/kustomize-argoupdater/kustomization.yaml
+++ b/kustomize-argoupdater/kustomization.yaml
@@ -4,6 +4,6 @@ namePrefix: kustomize-
 resources:
 - deployment.yaml
 - service.yaml
-- ingress.yaml
+#- ingress.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
