--- a/kustomize-argoupdater/service.yaml
+++ b/kustomize-argoupdater/service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service	
 metadata:	
   name: nginx
-spec:	
+spec:
+  type: LoadBalencer
   ports:	
   - port: 80
     targetPort: 80
