--- a/kustomize-argoupdater/service.yaml
+++ b/kustomize-argoupdater/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:	
   name: nginx
 spec:
-  type: LoadBalencer
+  type: LoadBalancer
   ports:	
   - port: 80
     targetPort: 80
